[package]
name = "scaling-umbrella"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.4"
hyper = { version = "0.14.18", features = ["full"] }
tokio = { version = "1.18.1", features = ["full"] }
tokio-util = { version = "0.7.1", features = ["io"] }
tower = "0.4.12"
futures = "0.3.21"